# llamma-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
docs/src/llamma_notes/: curve_llamma_notes.tex
docs/src/parameter_selection/: parameter_selection.tex
results/BTCUSDT/: losses_A__500000_50.json  losses_dynamic_fee__500000_50.json  losses_initial_range__500000_50.json
simulator/: __init__.py  calculation.py  logging.py  settings.py
simulator/amm/: intitial_liquidity.py  lending_amm.py  price_history_loader.py  price_oracle.py  simulator.py
simulator/import_data/: __init__.py  base.py  binance.py
simulator/pairs/btcusd/: calculate_a.py  calculate_dynamic_fee.py  calculate_range_loss.py
